examples/apps/fruits-v1/kubernetes/04-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fruits-ingress
  namespace: fruits
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mytest.com
    secretName: app-tls
  rules:
  - host: mytest.com
    http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 3000
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 3000
